# gnome-convert

./: README.md  com.qsk.gconvert.json  com.qsk.gconvert.json~  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.qsk.gconvert.json/: init
.flatpak-builder/checksums/: x86_64-com.qsk.gconvert.json
data/: com.qsk.gconvert.desktop.in  com.qsk.gconvert.gschema.xml  com.qsk.gconvert.metainfo.xml.in  gconvert.gresource.xml  meson.build  style.css
data/icons/: meson.build
data/icons/hicolor/scalable/apps/: com.qsk.gconvert.svg2
data/ui/: ConvertListbox.ui  FileRowbox.ui  HeaderBar.ui  SelectListbox.ui  window.cmb  window.ui
data/ui/gtk/: help-overlay.ui
gnomeconvert/: filemanager.py  filerowbox.py  filters.py  gconvert.gresource.xml  main.py  meson.build  selectlistbox.py  utils.py  window.cmb  window.py
gnomeconvert/widgets/: convertlistbox.py  filerowbox.py  headerbar.py  meson.build  selectlistbox.py
po/: POTFILES  meson.build
src/: gconvert.gresource.xml  gconvert.in  main.py  meson.build  open.css  style.css  window.cmb  window.py  window.ui  window.ui~
